--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express": "^4.16.4",
     "express-sslify": "^1.2.0",
     "pg": "^8.5.0",
-    "react-select": "^3.1.0",
+    "react-date-range": "^1.1.3",
+    "react-select": "^3.1.1",
     "stripe": "6.28.0"
   },
   "devDependencies": {
