--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "express-sslify": "^1.2.0",
     "pg": "^8.5.0",
     "react-date-range": "^1.1.3",
-    "react-select": "^3.1.1",
-    "stripe": "6.28.0"
+    "react-select": "^3.1.1"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
